# mcpdemo

./: .env.example  README.md  pyproject.toml
src/: api_server.py  mcp_client.py  mcp_server.py
